--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <h1>gh-pagesブランチは、GitHub Pagesに公開されます。</h1>
-    <p>この変更は、masterブランチで追加されました。</p>
+    <p>この変更は、gh-pagesブランチで追加されました。</p>
 </body>
 </html>
